# deepagent_experiments

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml
examples/: config.py  research_agent.py  run_agent.ipynb  utils.py
examples/ai_governance_agent/: __init__.py  agent.py  agent_demo.ipynb
examples/ai_governance_agent/output/: current_assessment.json
examples/ai_governance_agent/prompts/: __init__.py  prompts.py
examples/ai_governance_agent/questionnaire/: governance_questionnaire.md
examples/ai_governance_agent/tools/: __init__.py  tools.py
examples/ai_ideation_agent/: __init__.py  agent.py  agent_demo.ipynb  langgraph.json
examples/ai_ideation_agent/output/: .gitkeep
examples/ai_ideation_agent/prompts/: __init__.py  prompts.py
examples/ai_ideation_agent/questionnaire/: __init__.py  ideation_canvas.md
examples/ai_ideation_agent/tools/: __init__.py  tools.py
examples/data_agent/: __init__.py  agent.py  agent_demo.ipynb  langgraph.json
examples/data_agent/data/: create_sample_db.py  sample.db
examples/data_agent/prompts/: __init__.py  prompts.py
examples/data_agent/tools/: __init__.py  tools.py
examples/project_kickoff_agent/: __init__.py  agent.py  agent_demo.ipynb  langgraph.json
examples/project_kickoff_agent/prompts/: prompts.py  (+1 more)
examples/requirements_agent/: __init__.py  agent.py  agent_demo.ipynb  langgraph.json
examples/research_agent/: agent.py  agent_demo.ipynb  langgraph.json  research_agent.ipynb  run_agent_verbose.py
examples/simple_agent/: agent.py  agent_demo.ipynb  langgraph.json
src/: research_agent.py  run_agent.ipynb
(+15 files in other folders)
