[project]
name = "deepagent-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.2.8",
    "httpx>=0.28.1",
    "langchain-google-genai>=3.0.3",
    "langchain-tavily>=0.2.13",
    "langgraph-cli>=0.4.7",
    "markdownify>=1.2.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "tavily-python>=0.7.14",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"
